--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     --social-icon-inner-color: #fff;
     --desc-font-size: 11px;
     /*----- Light theme ------*/
-    --website-primary-color: #f0e4e4;
+    --website-primary-color: #e7e0e0;
     --website-secondary-color: #33000d;
     --panel-contrast-color: #33000d;
     --card-background: #f6f6f6;
