--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@
 }
 
 .skills-col {
-  background: #eac8c8;
+  background: #d9c8c8;
   border-radius: 5px;
   padding: 1em;
 	min-width: 200px;
@@ -321,6 +321,26 @@ html {
   display: block;
   content: "";
 }
+
+.sections-title {
+  position: relative;
+  display: inline-block; /* Header are 100% width by their default block behaviour */
+  font-size: 15px;
+  font-weight: 600;
+  color: var(--website-secondary-color);
+}
+
+.sections-title:before{
+  position: absolute;
+  height: 2.5px;
+  width: 70%;
+  left: 0;
+  bottom: -2px;
+  background: var(--contrast-color);
+  display: block;
+  content: "";
+}
+
 
 .bio {
   margin-top: 15px;
