--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding:0px;
     font-family: 'Poppins',sans-serif;
     box-sizing: border-box;
+    font-variant: small-caps;
 }
 
 :root {
@@ -259,12 +260,12 @@ html {
 
 .intro-text p {
     margin-top: 6%;
-    font-size: 18px;
+    font-size: 27px;
     color: var(--off-white);
 }
 
 .intro-text h1{
-    font-size: 50px;
+    font-size: 45px;
 }
 
 .intro-text h1 span {
@@ -325,7 +326,7 @@ html {
 .sections-title {
   position: relative;
   display: inline-block; /* Header are 100% width by their default block behaviour */
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 600;
   color: var(--website-secondary-color);
 }
@@ -380,7 +381,7 @@ html {
     border-radius: 2.6rem;
     cursor: pointer;
     display: inline-block;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     height: 2.2rem;
     width: 2.2rem;
     line-height: 2.4rem;
@@ -393,7 +394,7 @@ html {
     text-decoration: none;
     display: inline-block;
     padding: 8px 10px;
-    font-size: 12px;
+    font-size: 14px;
     color: #fff;
     background-color: #ff004f; 
     border: 2px solid #ff004f;
@@ -475,7 +476,7 @@ html {
     padding: 3px 5px;
     margin: 2px;
     border-radius: 10px;
-    font-size: 9px;
+    font-size: 12px;
     color: white;
     font-weight: 500;
   }
@@ -491,14 +492,14 @@ html {
   }
 
   .uni-details h2, .company-info h2 {
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 550;
     color: var(--website-secondary-color);
   }
 
   .uni-details .display-flex-center p,
   .timeline-content .header p {
-    font-size: 11px;
+    font-size: 14px;
     font-weight: 600;
     color: var(--off-white)
   }
@@ -533,7 +534,7 @@ html {
 
 /* Container around content */
 .timeline-dot {
-  padding: 10px 40px;
+  padding: 10px 0px;
   position: relative;
   background-color: inherit;
   width: 50%;
@@ -623,7 +624,7 @@ html {
   border-radius: 2.6rem;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.2rem;
+  font-size: 1.0rem;
   margin: 0 3px;
   user-select: none;
   cursor: default;
@@ -717,7 +718,7 @@ footer {
   padding: 8px;
   bottom: 0;
   width: 100%;
-  font-size: 10px;
+  font-size: 14px;
   display: flex;
   justify-content: center;
 }
@@ -764,11 +765,11 @@ footer {
 @media only screen and (max-width: 600px){
   .mainHeader nav .fas {
     display: block;
-    font-size: 18px
+    font-size: 25px
   }
 
   .mainHeader .logo {
-    width: 7rem;
+    width: 15rem;
     padding-top: 5px;
   }
 
